huz is brilliant

--- a/index.html
+++ b/index.html
@@ -1,140 +1,154 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MUHEEB HOME RENOVATION</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <div class="banner">
-    <div class="navbar">
-      <img src="./assets/imgs/logo.jpg" class="logo">
-         <ul>
-           <li><a href="#"> Home </a> </li>
-           <li><a href="#"> About </a> </li>
-           <li><a href="#"> Services </a> </li>
-           <li><a href="#"> Contact </a> </li>
-      </ul>
-    </div>
-    <div class="content"> 
-      <h1> MUHEEB TECHNICAL SERVICES </h1>
-      <hr>
-      <p>We provide complete solution for stylish and modern home renovation,<br> we make your dream home a reality!</p>
-         <div> <button class="button"><span></span> Discover more </button>
-       </div>
-  </div>
-</div>
-<br>
-<div class="part1">
-  <h2>WHY CHOOSE US? </h2>
-  <br>
-<div class="row row-cols-1 row-cols-md-3">
-  <div class="col mb-4">
-    <div class="card">
-      <img src="./assets/imgs/image 71.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Quality workmanship</h5>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>MUHEEB HOME RENOVATION</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
+  </head>
+  <body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"></script>
+    <div class="banner">
+      <div class="navbar">
+        <img src="./assets/imgs/logo.jpg" class="logo">
+        <ul>
+          <li><a href="#"> Home </a> </li>
+          <li><a href="#"> About </a> </li>
+          <li><a href="#"> Services </a> </li>
+          <li><a href="#"> Contact </a> </li>
+        </ul>
+      </div>
+      <div class="content">
+        <h1> MUHEEB TECHNICAL SERVICES </h1>
+        <hr>
+        <p>We provide complete solution for stylish and modern home renovation,<br>
+          we make your dream home a reality!</p>
+        <div> <button class="button"><span></span> Discover more </button>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col mb-4">
-    <div class="card2">
-      <img src="./assets/imgs/image 82.png" class="card-img-top" alt="...">
-      <div class="card-body2">
-        <h5 class="card-title">Expertise and experience <br>in field</h5>
+    <br>
+    <div class="part1">
+      <h2>WHY CHOOSE US? </h2>
+      <br>
+      <div class="row row-cols-1 row-cols-md-3">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="./assets/imgs/image 71.png" class="card-img-top"
+              alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Quality workmanship</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card2">
+            <img src="./assets/imgs/image 82.png" class="card-img-top"
+              alt="...">
+            <div class="card-body2">
+              <h5 class="card-title">Expertise and experience <br>in field</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card3">
+            <img src="./assets/imgs/image 93.png" class="card-img-top"
+              alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Attention to detail</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card4">
+            <img src="./assets/imgs/image 104.png" class="card-img-top"
+              alt="...">
+            <div class="card-body2">
+              <h5 class="card-title">Affordable pricing</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card5">
+            <img src="./assets/imgs/image 125.png" class="card-img-top"
+              alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Communication and customer service</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+    <div class="part2">
+      <h2> projects </h2>
+      <h3> residential sites </h3>
+
+      <img src="./assets/imgs/Frame 55frame.png">
+      <h3> commercial sites</h3>
+      <img src="./assets/imgs/Frame 372.png">
+    </div>
+
+    <div class="part3">
+      <h2> WHAT OUR CLIENT <br> SAY</h2>
+      <div class="container text-center">
+        <div class="row g-2">
+          <div class="col-6">
+            <div class="p-3">"Lorem ipsum dolor sit amet, consectetur adipiscing
+              elit, sed do eiusmod tempor" </div>
+          </div>
+          <div class="col-6">
+            <div class="p-3">" Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor" </div>
+          </div>
+          <div class="col-6">
+            <div class="p-3-1">"Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor" </div>
+          </div>
+          <div class="col-6">
+            <div class="p-3-1">" Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor" </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col mb-4">
-    <div class="card3">
-      <img src="./assets/imgs/image 93.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Attention to detail</h5>
+
+    <hr>
+    <div class="part4">
+      <h2> milestone </h2>
+      <div class="has-bg-img">
+        <div class="container overflow-hidden text-center">
+          <div class="row gx-5">
+            <div class="col">
+              <div class="p-3">Custom column padding</div>
+            </div>
+            <div class="col">
+              <div class="p-3">Custom column padding</div>
+            </div>
+            <div class="col">
+              <div class="p-3">Custom column padding</div>
+
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col mb-4">
-    <div class="card4">
-      <img src="./assets/imgs/image 104.png" class="card-img-top" alt="...">
-      <div class="card-body2">
-        <h5 class="card-title">Affordable pricing</h5>
-      </div>
+
+
+
+    <div>
+      <p> BOOK YOUR FREE CONSULTATION NOW > </p>
+
     </div>
-  </div>
-  <div class="col mb-4">
-    <div class="card5">
-      <img src="./assets/imgs/image 125.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Communication and customer service</h5> 
-      </div>
-    </div>
-  </div>
-</div>
-  
-</div>
-
-
-<div class="part2"> 
-  <h2> projects </h2>
-  <h3> residential sites </h3>
-
-  <img src="./assets/imgs/Frame 55frame.png">
-  <h3> commercial sites</h3>
-  <img src="./assets/imgs/Frame 372.png">
-</div>
-
-<div class="part3">
-  <h2> WHAT OUR CLIENT <br> SAY</h2>
-   <div class="container text-center">
-  <div class="row g-2">
-    <div class="col-6">
-      <div class="p-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor" </div>
-    </div>
-    <div class="col-6">
-      <div class="p-3" >"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor" </div>
-    </div>
-    <div class="col-6">
-      <div class="p-3-1">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor" </div>
-    </div>
-    <div class="col-6">
-      <div class="p-3-1" >"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor" </div>
-    </div>
-  </div>
-</div>
-</div>
-
-  <hr>
-<div class="part4">
- <h2> milestone </h2>
- <div class="has-bg-img"> 
-    <div class="container overflow-hidden text-center">
-     <div class="row gx-5">
-       <div class="col">
-     <div class="p-3">Custom column padding</div>
-    </div>
-    <div class="col">
-      <div class="p-3">Custom column padding</div>
-    </div>
-    <div class="col">
-     <div class="p-3">Custom column padding</div>
-     <img class="bg-img" src="leaf.png">
-    </div>
-  </div>
-</div>
-</div>
-</div>
-
-
-
-<div>
- <p> BOOK YOUR FREE CONSULTATION NOW > </p>
-
-
-
-
-
-</body>
+  </body>
 </html>
