created new pages

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <img src="./assets/imgs/logo.jpg" class="logo">
         <ul>
           <li><a href="#"> Home </a> </li>
-          <li><a href="#"> About </a> </li>
+          <li><a href="file:///C:/Users/Abbas/Desktop/HAWRA2/about.html"> About </a> </li>
           <li><a href="#"> Services </a> </li>
           <li><a href="#"> Contact </a> </li>
         </ul>
       </div>
       <div class="content">
         <h1> MUHEEB TECHNICAL SERVICES </h1>
-        <hr>
+        <hr class="dark">
         <p>We provide complete solution for stylish and modern home renovation,<br>
           we make your dream home a reality!</p>
         <div> <button class="button"><span></span> Discover more </button>
@@ -39,9 +39,9 @@
     <div class="part1">
       <h2>WHY CHOOSE US? </h2>
       <br>
-      <div class="row row-cols-1 row-cols-md-3">
-        <div class="col mb-4">
-          <div class="card">
+      <div class="row">
+        <div class="col col-sm-12 col-md-6 col-lg-4 ">
+          <div class="card1">
             <img src="./assets/imgs/image 71.png" class="card-img-top"
               alt="...">
             <div class="card-body">
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-        <div class="col mb-4">
+        <div class="col col-sm-12 col-md-6 col-lg-4">
           <div class="card2">
             <img src="./assets/imgs/image 82.png" class="card-img-top"
               alt="...">
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card3">
             <img src="./assets/imgs/image 93.png" class="card-img-top"
               alt="...">
@@ -67,7 +67,10 @@
             </div>
           </div>
         </div>
-        <div class="col mb-4">
+        </div>
+        <br>
+        <div class="row">
+        <div class="col col-sm-12 col-md-6 col-lg-4">
           <div class="card4">
             <img src="./assets/imgs/image 104.png" class="card-img-top"
               alt="...">
@@ -76,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="col mb-4">
+        <div class="col col-sm-12 col-md-6 col-lg-4">
           <div class="card5">
             <img src="./assets/imgs/image 125.png" class="card-img-top"
               alt="...">
@@ -88,6 +91,7 @@
       </div>
 
     </div>
+    <br>
 
 
     <div class="part2">
@@ -98,24 +102,24 @@
       <h3> commercial sites</h3>
       <img src="./assets/imgs/Frame 372.png">
     </div>
-
+<br>
     <div class="part3">
       <h2> WHAT OUR CLIENT <br> SAY</h2>
       <div class="container text-center">
         <div class="row g-2">
-          <div class="col-6">
+          <div class="col-sm-12 col-md-6">
             <div class="p-3">"Lorem ipsum dolor sit amet, consectetur adipiscing
               elit, sed do eiusmod tempor" </div>
           </div>
-          <div class="col-6">
+          <div class=" col-sm-12 col-md-6">
             <div class="p-3">" Lorem ipsum dolor sit amet, consectetur
               adipiscing elit, sed do eiusmod tempor" </div>
           </div>
-          <div class="col-6">
+          <div class=" col-sm-12 col-md-6">
             <div class="p-3-1">"Lorem ipsum dolor sit amet, consectetur
               adipiscing elit, sed do eiusmod tempor" </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-12 col-md-6">
             <div class="p-3-1">" Lorem ipsum dolor sit amet, consectetur
               adipiscing elit, sed do eiusmod tempor" </div>
           </div>
@@ -123,31 +127,37 @@
       </div>
     </div>
 
-    <hr>
+    <hr class="light"><br>
     <div class="part4">
       <h2> milestone </h2>
+      <br>
       <div class="has-bg-img">
         <div class="container overflow-hidden text-center">
           <div class="row gx-5">
             <div class="col">
-              <div class="p-3">Custom column padding</div>
+              <div class="p-3 mile"> <h4> <strong>HAPPY CLIENTS</strong> </h4> <p> +50</p></div>
             </div>
             <div class="col">
-              <div class="p-3">Custom column padding</div>
+              <div class="p-3 mile"><h4><strong> TOTAL DESIGNS AND PROJECTS COMPLETED</strong></h4><p> +100</p></div>
             </div>
             <div class="col">
-              <div class="p-3">Custom column padding</div>
+              <div class="p-3 mile"><h4><strong>YEARS OF EXPERIENCE</strong></h4><P>6</P></div>
 
             </div>
           </div>
         </div>
       </div>
     </div>
+<br>
+<br>
 
+    <div class="part5">
+      <p><a href="#"> BOOK YOUR FREE CONSULTATION NOW > </a></p>
 
+    </div>
 
-    <div>
-      <p> BOOK YOUR FREE CONSULTATION NOW > </p>
+    <div class="part6">
+      <p> Copyright © 2020 Muheeb Technical Services </p>
 
     </div>
   </body>
